ready for deployment

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -4,6 +4,7 @@
 
 {% load active_link_tags %}
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -110,21 +111,27 @@
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>Headquarters</h3>
-                  <p>43 Yaounde Street, Zone 6, Wuse, Abuja</p>
+                  <p>
+                    ULO Plaza, 34 Sokode Crescent, <br>
+                    2nd Floor, Wing B, Suite 4, <br>
+                    Wuse Zone 5, Abuja.<br><br>
+                  </p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Enquiries</h3>
-                  <p>info@maxprng.com<br>contact@maxprng.com</p>
+                  <p>info@maxprng.com</p>
+                  <p>admin@maxprng.com</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Give us a Call</h3>
-                  <p>+234 5589 55488 55<br>+234 6678 254445 41</p>
+                  <p>+234 (0)803 408 0093</p>
+                  <p>+234 (0)905 555 7778</p>
                 </div>
               </div>
             </div>
@@ -182,19 +189,31 @@
             <div class="footer-info">
               <a href="{% url 'home' %}" class="logo mr-auto"><img src="{% static 'assets/img/maxpr002.png' %}" alt="" class="img-fluid"></a>
               <p>
-                43 Yaounde Street, Zone 6 <br>
-                Wuse, Abuja<br><br>
-                <strong>Phone:</strong> +234 5589 55488 55<br>
+                ULO Plaza, 34 Sokode Crescent, <br>
+                2nd Floor, Wing B, Suite 4, <br>
+                Wuse Zone 5, Abuja.<br><br>
+                <strong>Phone1:</strong> +234 (0)803 408 0093<br>
+                <strong>Phone2:</strong> +234 (0)905 555 7778<br>
                 <strong>Email:</strong> info@maxprng.com<br>
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://twitter.com/Maxprng" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.instagram.com/maxprng/" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 footer-links">
+            <h4>Core Services</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'marketing' %}">Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'prcomm' %}">Public Relations</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'brandmgt' %}">Branding & Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'services' %}">Political Communications</a></li>
+            </ul>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
@@ -208,17 +227,6 @@
             {% else %}
               <li><i class="bx bx-chevron-right"></i> <a href="{% url 'login' %}">Log In</a></li>
             {% endif %}
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'marketing' %}">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'prcomm' %}">PR & Communication</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'brandmgt' %}">Brand Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'mediarelations' %}">Media Relations</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'prreporting' %}">PR Reporting</a></li>
             </ul>
           </div>
 
