--- a/templates/about.html
+++ b/templates/about.html
@@ -33,13 +33,13 @@
 
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <p>
-                Based in Abuja, MaxPR is a leading marketing, digital and PR agency, offering a complete range of award-winning marketing services, including brand development, strategic thinking, tactical marketing campaigns, digital communications, PR and design.
+              Based in Abuja, MaxPR is a leading marketing, digital and PR agency, offering a complete range of services, including brand development, strategic thinking, tactical marketing campaigns, digital communications, PR and design.
             </p>
             <p>
-                Founded upon creative thinking and design, we have supported our clients to deliver successful marketing and PR activities in Abuja, Lagos and beyond for more than 10 years.
+              Over the years, we have supported our clients to deliver successful PR and marketing campaigns in Nigeria, especially in Abuja and  Lagos.
             </p>
             <p>
-                We believe in developing integrated and innovative marketing solutions that add value and answer our clients' briefs and objectives, based upon insight, creativity and the combination of marketing disciplines, ensuring media neutrality that delivers results and optimises their return on investment.
+              We believe in developing integrated and innovative marketing solutions that add value and answer our clients' briefs and objectives, based upon insight, creativity and the combination of marketing disciplines, ensuring media neutrality that delivers results and optimises their return on investment.
             </p>
           </div>
 
