--- a/templates/brand_mgt.html
+++ b/templates/brand_mgt.html
@@ -10,7 +10,7 @@
   <section id="brands-hero" class="d-flex align-items-center">
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
         <h1>Services</h1>
-        <h2>Brand Management.</h2>
+        <h2>We help our clients deliver their corporate objectives by providing the highest quality strategic advice and devising and implementing powerful communications plans that connects with key audiences.</h2>
     </div>
   </section><!-- End Hero -->
 
@@ -130,22 +130,22 @@
 
                   <div class="d-flex align-items-center mb-2">
                     <i class="bi bi-check2"></i>
-                    <h4>Customer and employee satisfaction</h4>
+                    <h4>Brand Management</h4>
                   </div>
                   
                   <div class="d-flex align-items-center mb-2">
                     <i class="bi bi-check2"></i>
-                    <h4>Brand perception analysis</h4>
+                    <h4>Logo and Web Design</h4>
                   </div>
 
                   <div class="d-flex align-items-center mb-2">
                     <i class="bi bi-check2"></i>
-                    <h4>Marketplace analysis</h4>
+                    <h4>Brand Perception analysis</h4>
                   </div>
 
                   <div class="d-flex align-items-center mb-2">
                     <i class="bi bi-check2"></i>
-                    <h4>Stakeholder engagement</h4>
+                    <h4>Corporate Communications Materials</h4>
                   </div>
                 </div><!-- End Tab 1 Content -->
   
