--- a/templates/includes/commons.html
+++ b/templates/includes/commons.html
@@ -14,7 +14,7 @@
         <div class="testimonial-wrap">
           <div class="testimonial-item">
             <img src="{% static 'assets/img/testimonials/test1.jpg' %}" class="testimonial-img" alt="">
-            <h3>Damian Okonkwo</h3>
+            <h3>Lilian Okonkwo</h3>
             <h4>Ceo &amp; Founder</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -109,7 +109,7 @@
 
         <div class="col-xl-3 col-lg-4 col-md-6">
           <div class="member" data-aos="zoom-in" data-aos-delay="100">
-            <img src="{% static 'assets/img/team/team1.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/team/prime.jpg' %}" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
                 <h4>Maxwell Babatunde</h4>
@@ -127,10 +127,10 @@
 
         <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.1s">
           <div class="member" data-aos="zoom-in" data-aos-delay="200">
-            <img src="{% static 'assets/img/team/team5.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/team/prime2.jpg' %}" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                <h4>Nnadi Ifeanyi</h4>
+                <h4>Nnadi Chimamanda</h4>
                 <span>Product Manager</span>
               </div>
               <div class="social">
@@ -145,10 +145,10 @@
 
         <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.2s">
           <div class="member" data-aos="zoom-in" data-aos-delay="300">
-            <img src="{% static 'assets/img/team/team6.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/team/team45.jpg' %}" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                <h4>Raji Babalola</h4>
+                <h4>Hassan Yusuf</h4>
                 <span>CTO</span>
               </div>
               <div class="social">
@@ -163,10 +163,10 @@
 
         <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.3s">
           <div class="member" data-aos="zoom-in" data-aos-delay="400">
-            <img src="{% static 'assets/img/team/team4.jpg' %}" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/team/prime3.jpg' %}" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                <h4>Chukwuma Oputa</h4>
+                <h4>Kehinde Bankole</h4>
                 <span>Accountant</span>
               </div>
               <div class="social">
