--- a/templates/services.html
+++ b/templates/services.html
@@ -51,6 +51,274 @@
       </div>
     </section><!-- End About Section -->
 
+    <!-- ======= Features Section ======= -->
+    <section id="features" class="features">
+
+      <div class="container" data-aos="fade-up">
+
+        <!-- Feature Tabs -->
+        <div class="row feture-tabs" data-aos="fade-up">
+          <div class="col-lg-10">
+            <h3>Branding & Design</h3>
+
+            <!-- Tabs -->
+            <ul class="nav nav-pills mb-3">
+              <li>
+                <a class="nav-link active" data-bs-toggle="pill" href="#tab1">Brand Management</a>
+              </li>
+              <li>
+                <a class="nav-link" data-bs-toggle="pill" href="#tab2">Logo Design</a>
+              </li>
+              <li>
+                <a class="nav-link" data-bs-toggle="pill" href="#tab3">Web Design</a>
+              </li>
+              <li>
+                <a class="nav-link" data-bs-toggle="pill" href="#tab4">Corporate communications materials</a>
+              </li>
+            </ul><!-- End Tabs -->
+
+            <!-- Tab Content -->
+            <div class="tab-content">
+
+              <div class="tab-pane fade show active" id="tab1">
+                <p>We discover the true health of your current brand and the insights you need to move your organisation forward.</p>
+                <p>We start off by listening carefully to the views of your senior people, employees, customers and partners. Only when we fully understand where you are today, can we work with you to develop the brand.</p>
+              </div><!-- End Tab 1 Content -->
+
+              <div class="tab-pane fade show" id="tab2">
+                <p>We develop your brand concepts, progressed through to a final logo and artwork and a full brand guidelines document, which is then applied across other materials.</p>
+                
+              </div><!-- End Tab 2 Content -->
+
+              <div class="tab-pane fade show" id="tab3">
+                <p>We believe in creativity and functionality when delivering websites for our clients. We deliver highly functioning sites with the intentions of the user in mind, fully responsive to any device.</p>
+                
+              </div><!-- End Tab 3 Content -->
+
+              <div class="tab-pane fade show" id="tab4">
+                  <p>We then project manage the production of the document from start to finish, drafting all copy including case studies and designing the entirety of the document including infographics, brochures, reports, newsletters, flyers, press adverts, exhibition boards, comments cards, display panels, signage and other materials.</p>
+                
+                </div><!-- End Tab 4 Content -->
+
+            </div>
+
+          </div>
+
+          
+
+        </div><!-- End Feature Tabs -->
+
+      </div>
+
+    </section><!-- End Features Section -->
+
+
+    <!-- ======= Why Us Section ======= -->
+    <section id="why-us" class="why-us section-bg">
+      <div class="container-fluid" data-aos="fade-up">
+
+        <div class="row">
+
+          <div class="col-lg-5 align-items-stretch video-box" style="background-image: url({% static 'assets/img/insights4.jpg' %});" data-aos="zoom-in" data-aos-delay="100">
+            <a href="#" class="venobox mb-4" data-vbtype="video" data-autoplay="true"></a>
+          </div>
+
+          <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
+
+            <div class="content">
+              <h3><strong>Public Relations</strong></h3>
+              <p>
+                At MaxPR, we’re passionate about PR and how it enhances reputations, creating understanding with your target audiences. Our award-winning PR campaigns raise our clients’ visibility within their chosen sectors and beyond.
+              </p>
+            </div>
+
+            <div class="accordion-list">
+              <ul>
+                <li>
+                  <a data-toggle="collapse" class="collapse" href="#accordion-list-1"><span>01</span> Reputation management <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-1" class="collapse show" data-parent=".accordion-list">
+                    <p>
+                      In times of planning or crisis, pull on the big moments going back in time, and give your decision makers the context they need to make a call, right now.
+                    </p>
+                  </div>
+                </li>
+
+                <li>
+                  <a data-toggle="collapse" href="#accordion-list-2" class="collapsed"><span>02</span> Media relations <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-2" class="collapse" data-parent=".accordion-list">
+                    <p>
+                      We prepare a PR plan to support the planning strategy, which utilises key milestones to generate positive media attention. We have excellent contacts across national, trade, local and consumer media titles and are experts in managing the media.
+                    </p>
+                  </div>
+                </li>
+
+                <li>
+                  <a data-toggle="collapse" href="#accordion-list-3" class="collapsed"><span>03</span> Stakeholder relations <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-3" class="collapse" data-parent=".accordion-list">
+                    <p>
+                      We develop strategic, targeted communications programmes that support you in delivering the right message to the key stakeholders and influencers that can impact on your project.
+                    </p>
+                  </div>
+                </li>
+
+                <li>
+                  <a data-toggle="collapse" href="#accordion-list-4" class="collapsed"><span>04</span> Crisis communications <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-4" class="collapse" data-parent=".accordion-list">
+                    <p>
+                      From strategic guidance to hands on support we are there for our clients when they need us most. We provide 24/7 cover for our clients, with both hands-on support and senior strategic counsel.
+                    </p>
+                  </div>
+                </li>
+
+                <li>
+                  <a data-toggle="collapse" href="#accordion-list-5" class="collapsed"><span>05</span> Perception Research <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-5" class="collapse" data-parent=".accordion-list">
+                    <p>
+                      We deliver both qualitative and quantitative research to establish what our clients' stakeholders think about them, often at very senior levels across Government, business and the media.
+                    </p>
+                  </div>
+                </li>
+
+                <li>
+                  <a data-toggle="collapse" href="#accordion-list-6" class="collapsed"><span>06</span> PR Reporting <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-6" class="collapse" data-parent=".accordion-list">
+                    <p>
+                      Our elegant, industry leading media relations platform, combines easy to use tools with exceptional analysis. The first of its kind to place an intuitive and mobile interface at the heart of its design.
+                    </p>
+                  </div>
+                </li>
+
+              </ul>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Why Us Section -->
+
+
+    <!-- ======= Features Section ======= -->
+    <section id="features" class="features">
+
+      <div class="container" data-aos="fade-up">
+
+        <!-- Feature Tabs -->
+        <div class="row feture-tabs" data-aos="fade-up">
+          <div class="col-lg-12">
+            <h3>Political Communications</h3>
+
+            <!-- Tabs -->
+            <ul class="nav nav-pills mb-3">
+              <li>
+                <a class="nav-link active" data-bs-toggle="pill" href="#tab5">Political Engagements</a>
+              </li>
+              <li>
+                <a class="nav-link" data-bs-toggle="pill" href="#tab6">Key message and strategy development</a>
+              </li>
+              <li>
+                <a class="nav-link" data-bs-toggle="pill" href="#tab7">Political, media and intelligence monitoring</a>
+              </li>
+            </ul><!-- End Tabs -->
+
+            <!-- Tab Content -->
+            <div class="tab-content">
+
+              <div class="tab-pane fade show active" id="tab5">
+                <p>We have a  thorough understanding of the politics and an excellent contact network, backed up by extensive monitoring and research.</p>
+                <p>We invest around 10% of our turnover on in-house research functions and tools so we can constantly provide informed recommendations and then help our clients engage effectively with local, regional and national politics.</p>
+                <p>We also provide a range of intelligence monitoring services across our client base.</p>
+              </div><!-- End Tab 1 Content -->
+
+              <div class="tab-pane fade show" id="tab6">
+                <p>Assembling and testing messages in an engaging and effective manner to the targeted  audience is what we do best. We achieve this through effective planning and implementation.</p>
+              </div><!-- End Tab 2 Content -->
+
+              <div class="tab-pane fade show" id="tab7">
+                <p>Boasting a dedicated research team, we offer a range of intelligence monitoring services across our client base and pride ourselves on providing the highest quality strategic advice.</p>
+              </div><!-- End Tab 3 Content -->
+
+            </div>
+
+          </div>
+
+          
+
+        </div><!-- End Feature Tabs -->
+
+      </div>
+
+    </section><!-- End Features Section -->
+
+
+    <!-- ======= Features Section ======= -->
+    <section id="features" class="features">
+
+      <div class="container" data-aos="fade-up">
+
+        <!-- Feature Tabs -->
+        <div class="row feture-tabs" data-aos="fade-up">
+          <div class="col-lg-12">
+            <h3>Marketing</h3>
+
+            <!-- Tabs -->
+            <ul class="nav nav-pills mb-3">
+              <li>
+                <a class="nav-link active" data-bs-toggle="pill" href="#tab8">Social Listening</a>
+              </li>
+              <li>
+                <a class="nav-link" data-bs-toggle="pill" href="#tab9">Social Media Management</a>
+              </li>
+              <li>
+                <a class="nav-link" data-bs-toggle="pill" href="#tab10">Influencer Marketing</a>
+              </li>
+              <li>
+                <a class="nav-link" data-bs-toggle="pill" href="#tab11">Consumer & audience insights</a>
+              </li>
+              <li>
+                <a class="nav-link" data-bs-toggle="pill" href="#tab12">Event Management</a>
+              </li>
+            </ul><!-- End Tabs -->
+
+            <!-- Tab Content -->
+            <div class="tab-content">
+
+              <div class="tab-pane fade show active" id="tab8">
+                <p>Good PR isn’t always about gaining media coverage: it’s about reaching the right people. We’ll do this in the most effective way.</p>
+              </div><!-- End Tab 1 Content -->
+
+              <div class="tab-pane fade show" id="tab9">
+                <p>We create, curate, respond and engage on social media platforms on your behalf in line with your brand personality and tone of voice.</p>
+                <p>We instigate social adverting campaigns and ensure brands lead the conversation with word, picture, film and audio content that can’t be ignored.</p>
+              </div><!-- End Tab 2 Content -->
+
+              <div class="tab-pane fade show" id="tab10">
+                <p>At MaxPR, We get people talking at a global scale by partnering with influencers of every category, tier, and country. We then generate compelling conversation aimed at winning hearts and changing minds and behaviours.</p>
+              </div><!-- End Tab 3 Content -->
+
+              <div class="tab-pane fade show" id="tab11">
+                <p>MaxPR offers strategic Consumer and Audience insight for any size of business, offering support at a strategic level and combining marketing expertise with business acumen to help organisations succeed in achieving their objectives.</p>
+              </div><!-- End Tab 3 Content -->
+
+              <div class="tab-pane fade show" id="tab12">
+                <p>We run high-profile events, arrange launches for development projects and new research, manage roadshows, organize AGMs etc.</p>
+              </div><!-- End Tab 3 Content -->
+
+            </div>
+
+          </div>
+
+          
+
+        </div><!-- End Feature Tabs -->
+
+      </div>
+
+    </section><!-- End Features Section -->
+
+
+
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
         <div class="container" data-aos="fade-up">
