--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -6,6 +6,7 @@
 
 {% load crispy_forms_tags %}
 
+
 {% block title %}{{ post.title }}{% endblock title %}
 
 {% block content %}
@@ -43,7 +44,7 @@
 
             <div class="entry-meta">
               <ul>
-                <li class="d-flex align-items-center"><i class="icofont-user"></i> <a href="#">{{ post.author }}</a></li>
+                <li class="d-flex align-items-center"><i class="icofont-user"></i> <a href="#">{{ post.author.first_name }} {{ post.author.last_name }}</a></li>
                 <li class="d-flex align-items-center"><i class="icofont-wall-clock"></i> <a href="#">{{ post.publish }}</a></li>
                 <li class="d-flex align-items-center">
                   {% with comments.count as total_comments %}
@@ -78,9 +79,8 @@
               {% endif %}
 
               <div class="float-right share">
-                <a href="" title="Share on Twitter"><i class="icofont-twitter"></i></a>
-                <a href="" title="Share on Facebook"><i class="icofont-facebook"></i></a>
-                <a href="" title="Share on Instagram"><i class="icofont-instagram"></i></a>
+                <a href="http://www.twitter.com/share?url={{ request.build_absolute_uri }}"><i class="icofont-twitter"></i></a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}" title="Share on Facebook"><i class="icofont-facebook"></i></a>
               </div>
 
             </div>
@@ -88,15 +88,14 @@
           </article><!-- End blog entry -->
 
           <div class="blog-author clearfix">
-            <img src="{% static 'assets/img/blog/blog-author.jpg' %}" class="rounded-circle float-left" alt="">
-            <h4>{{ post.author }}</h4>
+            <img src="{{ post.author.profile.image.url }}" class="rounded-circle float-left" alt="">
+            <h4>{{ post.author.first_name }} {{ post.author.last_name }}</h4>
             <div class="social-links">
-              <a href="https://twitters.com/#"><i class="icofont-twitter"></i></a>
-              <a href="https://facebook.com/#"><i class="icofont-facebook"></i></a>
-              <a href="https://instagram.com/#"><i class="icofont-instagram"></i></a>
+              <a href="https://twitter.com/Maxprng"><i class="icofont-twitter"></i></a>
+              <a href="https://www.instagram.com/maxprng/"><i class="icofont-instagram"></i></a>
             </div>
             <p>
-              Itaque quidem optio quia voluptatibus dolorem dolor. Modi eum sed possimus accusantium. Quas repellat voluptatem officia numquam sint aspernatur voluptas. Esse et accusantium ut unde voluptas.
+              {{ post.author.profile.summary }}
             </p>
           </div><!-- End blog author bio -->
 
@@ -109,16 +108,19 @@
 
           {% for comment in comments %}
             <div id="comment-1" class="comment clearfix">
-              <img src="{% static 'assets/img/blog/comments-1.jpg' %}" class="comment-img  float-left" alt="">
-              <h5>
-                <a href="#">{{ comment.name }}</a> 
-                <a href="#" class="reply"><i class="icofont-reply"></i> Reply</a>
-              </h5>
-              <time>{{ comment.created }}</time>
-              <p>
-                {{ comment.body|linebreaks }}
-              </p>
-            </div><!-- End comment #1 -->
+              <div class="d-flex">
+                <div class="comment-img"><img src="{% static 'assets/img/blog/user.png' %}" alt=""></div>
+                <div>
+                  <h5>
+                    <a href="#">{{ comment.name }}</a>
+                  </h5>
+                  <time>{{ comment.created }}</time>
+                  <p>
+                    {{ comment.body|linebreaks }}
+                  </p>
+                </div>
+              </div><!-- End comment #1 -->
+            </div>
           {% empty %}
             <div id="comment-1" class="comment clearfix">
               <p>There are no Comments yet.</p>
