--- a/templates/_base.html
+++ b/templates/_base.html
@@ -75,6 +75,7 @@
             <ul>
               <li class="{% active_link 'repmanagement' 'active' %}"><a href="{% url 'repmanagement' %}">Reputation Management</a></li>
               <li class="{% active_link 'mediarelations' 'active' %}"><a href="{% url 'mediarelations' %}">Media Relations</a></li>
+              <li class="{% active_link 'services' 'active' %}"><a href="{% url 'services' %}">Political Communications</a></li>
               <li class="{% active_link 'stakeholderrelations' 'active' %}"><a href="{% url 'stakeholderrelations' %}">Stakeholder Relations</a></li>
               <li class="{% active_link 'crisiscomm' 'active' %}"><a href="{% url 'crisiscomm' %}">Crisis Communications</a></li>
               <li class="{% active_link 'prreporting' 'active' %}"><a href="{% url 'prreporting' %}">PR Reporting</a></li>
